# serializer version: 1
# name: test_gateway[GET /fact-check/{id}]
  dict({
    'id': '***',
    'output': '',
    'status': 'running',
  })
# ---
# name: test_gateway[POST /fact-check]
  dict({
    'id': '***',
    'output': '',
    'status': 'pending',
  })
# ---
